--- a/sorting_searching_algo/searching_sorting.ipynb
+++ b/sorting_searching_algo/searching_sorting.ipynb
@@ -516,7 +516,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "e5Skvkui0uVx"
       },
@@ -550,7 +550,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "vNVtnItS15Lx"
       },
@@ -562,7 +562,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -577,10 +577,8 @@
               "[1, 2, 2, 3, 5, 6, 7, 8]"
             ]
           },
-          "execution_count": 8,
-          "metadata": {
-            "tags": []
-          },
+          "execution_count": 6,
+          "metadata": {},
           "output_type": "execute_result"
         }
       ],
@@ -590,7 +588,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "arr1 = [1,2,8,10,3,88,10,100]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "background_save": true
@@ -611,6 +618,35 @@
         "  else:\n",
         "    merge_sort(left)\n",
         "    merge_sort(right)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "merge_sort(arr1)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[1, 2, 8, 10, 3, 88, 10, 100]"
+            ]
+          },
+          "execution_count": 10,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "arr1"
       ]
     },
     {
@@ -708,12 +744,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "PNf7neZ1yZ1s"
       },
       "outputs": [],
       "source": [
+        "# the methodology we have used we are selecting the number randomly(array end) in array ,and sorting the smaller number of random num ,and also the larger number of the random numbers.\n",
         "def quick_sort(arr,low,high):\n",
         "\n",
         "  if len(arr) == 1:\n",
@@ -722,14 +759,14 @@
         "  if low < high:\n",
         "\n",
         "    pi = partition(arr,low,high)\n",
-        "\n",
+        "    print(pi)\n",
         "    quick_sort(arr,low,pi-1)\n",
         "    quick_sort(arr,pi+1,high)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "RqlGnvbu4t2b"
       },
@@ -744,15 +781,38 @@
         "\n",
         "    if arr[j] <= pivot:\n",
         "      i+=1\n",
+        "      print(i,arr[i],arr[j])\n",
         "      arr[i],arr[j] = arr[j],arr[i]\n",
         "  arr[i+1],arr[high] = arr[high],arr[i+1]\n",
-        "\n",
+        "  print(arr)\n",
         "  return i+1"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0 10 1\n",
+            "[1, 5, 8, 9, 10, 7]\n",
+            "[1, 5, 8, 9, 10, 7]\n"
+          ]
+        }
+      ],
+      "source": [
+        "arr = [10, 7, 8, 9, 1, 5]\n",
+        "n = len(arr) \n",
+        "partition(arr,0,n-1)\n",
+        "print(arr)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -765,12 +825,20 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
+            "0 10 1\n",
+            "[1, 5, 7, 9, 10, 8]\n",
+            "1\n",
+            "2 7 7\n",
+            "[1, 5, 7, 8, 10, 9]\n",
+            "3\n",
+            "[1, 5, 7, 8, 9, 10]\n",
+            "4\n",
             "[1, 5, 7, 8, 9, 10]\n"
           ]
         }
       ],
       "source": [
-        "arr = [10, 7, 8, 9, 1, 5] \n",
+        "arr = [10, 8, 7, 9, 1, 5] \n",
         "n = len(arr) \n",
         "quick_sort(arr, 0, n-1)\n",
         "print(arr)"
@@ -804,7 +872,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.3"
+      "version": "3.10.9"
     }
   },
   "nbformat": 4,
